Resolve clipping issue in popular topics

--- a/src/components/app/Network/network.scss
+++ b/src/components/app/Network/network.scss
@@ -123,13 +123,6 @@
   padding-right: 20px;
 }
 
-.network--popular-topics {
-  .popular-topics {
-    position: sticky;
-    top: 20px;
-  }
-}
-
 @media (max-width: 768px) {
   .network--share-content,
   .network--popular-topics {
